fix bulletlist vertical align

--- a/styles/style.css
+++ b/styles/style.css
@@ -46,7 +46,6 @@
   border: 1px solid #63cfe3;
   border-radius: 100%;
   margin-right: 15px;
-  margin-top: 5px;
   display: flex;
   align-items: center;
   justify-content: center;
